--- a/deploy.yml
+++ b/deploy.yml
@@ -2,17 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: myweb
-  name: myweb
+    app: myweb1
+  name: myweb1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: myweb
+      app: myweb1
   template:
     metadata:
       labels:
-        app: myweb
+        app: myweb1
     spec:
       containers:
       - image: vimal13/apache-webserver-php
